--- a/colorGame.html
+++ b/colorGame.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 	<h1>The Great <span id='colorDisplay'>RGB</span> Color Game</h1>
+	<div>
+		<span id='colorMessage'></span>
+	</div>
 	<div id="container">
 		<div class="squares"></div>
 		<div class="squares"></div>
