--- a/colorGame.html
+++ b/colorGame.html
@@ -7,9 +7,12 @@
 	<link rel="stylesheet" type="text/css" href="colorGame.css">
 </head>
 <body>
-	<h1>The Great <span id='colorDisplay'>RGB</span> Color Game</h1>
-	<div>
+	<h1>The Great <br><span id='colorDisplay'>RGB</span> <br>Color Game</h1>
+	<div id="stripe">
+		<button id="reset">Start New</button>
 		<span id='colorMessage'></span>
+		<button id="easy-btn">Easy</button>
+		<button id="hard-btn" class="selected">Hard</button>
 	</div>
 	<div id="container">
 		<div class="squares"></div>
