--- a/colorGame.html
+++ b/colorGame.html
@@ -11,8 +11,8 @@
 	<div id="stripe">
 		<button id="reset">Start New</button>
 		<span id='colorMessage'></span>
-		<button id="easy-btn">Easy</button>
-		<button id="hard-btn" class="selected">Hard</button>
+		<button class="mode">Easy</button>
+		<button class="mode selected">Hard</button>
 	</div>
 	<div id="container">
 		<div class="squares"></div>
